<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        android:hint="@string/emailLogin"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="textEmailAddress"
            tools:ignore="DuplicateClickableBoundsCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_login"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
         />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:flow_horizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="@+id/loginSubmit"
        app:layout_constraintStart_toStartOf="@id/loginSubmit"
        app:layout_constraintTop_toBottomOf="@id/loginSubmit">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Nie masz konta? "/>
        <TextView
            android:id="@+id/loginToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:text="@string/signUp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/emailTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>