<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:background="@color/white"

    android:layout_height="match_parent"
    tools:context=".Login">






    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        android:hint="@string/username_login"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="16"
            tools:ignore="DuplicateClickableBoundsCheck" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_login"

        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputReg"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:inputType="textPassword"


            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:hint="Email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"


        app:layout_constraintEnd_toEndOf="@id/registerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            tools:ignore="DuplicateClickableBoundsCheck" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="ZAREJESTRUJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:flow_horizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="@+id/registerSubmit"
        app:layout_constraintStart_toStartOf="@id/registerSubmit"
        app:layout_constraintTop_toBottomOf="@id/registerSubmit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masz już konto? "/>
        <TextView
            android:id="@+id/registerToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:text="Zaloguj się!"/>
    </LinearLayout>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/usernameTextInputReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>